--- a/.env
+++ b/.env
@@ -1,41 +1,27 @@
 # colored GCC warnings and errors
 export GCC_COLORS='error=01;31:warning=01;35:note=01;36:caret=01;32:locus=01:quote=01'
 
-
 # Environment Variables
 export EDITOR=nvim
 
 # rust
-export PATH="$HOME/.cargo/bin:$PATH"
-. "$HOME/.cargo/env"
+export PATH="~/.cargo/bin:$PATH"
 
 # go
-export GOPATH=$HOME/go
+export GOPATH=~/go
 export PATH="$PATH:$GOPATH/bin"
 
-# gh completion
-if [ -f ~/.gh-completion.sh ]; then
-  source ~/.gh-completion.sh
-fi
-
 # nvm
-export NVM_DIR="$HOME/.nvm"
-[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
+export NVM_DIR=~/.nvm
 
 # oracle
-export LD_LIBRARY_PATH=/home/leonardo/.local/share/sti/instantclient_12_2
-export PATH="$PATH:$LD_LIBRARY_PATH"
-export TNS_ADMIN=/home/leonardo/.config/sti/oracle
+export LD_LIBRARY_PATH=~/.local/share/sti/instantclient_12_2
+export TNS_ADMIN=~/.config/sti/oracle
 export ORACLE_SID=ORCLPDB1
 
-# mysql
-export PATH="$PATH:/home/leonardo/.local/share/sti/mysql-5.7.34-linux-glibc2.12-x86_64/bin"
+# sdkman
+export SDKMAN_DIR=~/.sdkman
 
 # rvm
 export PATH="$GEM_HOME/bin:$PATH"
-export PATH="$PATH:$HOME/.rvm/bin"
-[[ -s "$HOME/.rvm/scripts/rvm" ]] && source "$HOME/.rvm/scripts/rvm"
-
-# sdkman
-export SDKMAN_DIR="$HOME/.sdkman"
-[[ -s "$HOME/.sdkman/bin/sdkman-init.sh" ]] && source "$HOME/.sdkman/bin/sdkman-init.sh"
+export PATH="$PATH:~/.rvm/bin"
