--- a/.env
+++ b/.env
@@ -22,6 +22,6 @@ export ORACLE_SID=ORCLPDB1
 # sdkman
 export SDKMAN_DIR=~/.sdkman
 
-# rvm
-export PATH="$GEM_HOME/bin:$PATH"
-export PATH="$PATH:~/.rvm/bin"
+# chruby
+source /usr/local/share/chruby/chruby.sh
+source /usr/local/share/chruby/auto.sh
