--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+#!/bin/zsh
+
 # colored GCC warnings and errors
 export GCC_COLORS='error=01;31:warning=01;35:note=01;36:caret=01;32:locus=01:quote=01'
 
@@ -5,22 +7,25 @@ export GCC_COLORS='error=01;31:warning=01;35:note=01;36:caret=01;32:locus=01:quo
 export EDITOR=nvim
 
 # rust
-export PATH="~/.cargo/bin:$PATH"
+export PATH="/home/leonardo/.cargo/bin:$PATH"
+[ -f "$HOME/.cargo/env" ] && source "$HOME/.cargo/env"
 
 # go
-export GOPATH=~/go
+export GOPATH=/home/leonardo/go
 export PATH="$PATH:$GOPATH/bin"
 
 # nvm
-export NVM_DIR=~/.nvm
+export NVM_DIR=/home/leonardo/.nvm
+[ -f "$NVM_DIR/nvm.sh" ] && source "$NVM_DIR/nvm.sh"
 
 # oracle
-export LD_LIBRARY_PATH=~/.local/share/sti/instantclient_12_2
-export TNS_ADMIN=~/.config/sti/oracle
+export LD_LIBRARY_PATH=/home/leonardo/.local/share/sti/instantclient_12_2
+export TNS_ADMIN=/home/leonardo/.config/sti/oracle
 export ORACLE_SID=ORCLPDB1
 
 # sdkman
-export SDKMAN_DIR=~/.sdkman
+export SDKMAN_DIR=/home/leonardo/.sdkman
+[ -f /home/leonardo/.sdkman/bin/sdkman-init.sh ] && source /home/leonardo/.sdkman/bin/sdkman-init.sh
 
 # chruby
 source /usr/local/share/chruby/chruby.sh
