--- a/.env
+++ b/.env
@@ -7,26 +7,25 @@ export GCC_COLORS='error=01;31:warning=01;35:note=01;36:caret=01;32:locus=01:quo
 export EDITOR=nvim
 
 # rust
-export PATH="/home/leonardo/.cargo/bin:$PATH"
+export PATH="$HOME/.cargo/bin:$PATH"
 [ -f "$HOME/.cargo/env" ] && source "$HOME/.cargo/env"
 
 # go
-export GOPATH=/home/leonardo/go
+export GOPATH="$HOME/go"
 export PATH="$PATH:$GOPATH/bin"
 
 # nvm
-export NVM_DIR=/home/leonardo/.nvm
+export NVM_DIR="$HOME/.nvm"
 [ -f "$NVM_DIR/nvm.sh" ] && source "$NVM_DIR/nvm.sh"
 
 # oracle
-export LD_LIBRARY_PATH=/home/leonardo/.local/share/sti/instantclient_12_2
-export TNS_ADMIN=/home/leonardo/.config/sti/oracle
+export LD_LIBRARY_PATH="$HOME/.local/share/sti/instantclient_12_2"
+export TNS_ADMIN="$HOME/.config/sti/oracle"
 export ORACLE_SID=ORCLPDB1
 
 # sdkman
-export SDKMAN_DIR=/home/leonardo/.sdkman
-[ -f /home/leonardo/.sdkman/bin/sdkman-init.sh ] && source /home/leonardo/.sdkman/bin/sdkman-init.sh
+export SDKMAN_DIR="$HOME/.sdkman"
+[ -f "$HOME/.sdkman/bin/sdkman-init.sh" ] && source "$HOME/.sdkman/bin/sdkman-init.sh"
 
-# chruby
-source /usr/local/share/chruby/chruby.sh
-source /usr/local/share/chruby/auto.sh
+# rvm
+[ -f "$HOME/.rvm/scripts/rvm" ] && source "$HOME/.rvm/scripts/rvm"
