--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,7 +1,20 @@
 add_newline = true
+format = """
+$username\
+$hostname\
+$directory\
+$git_branch\
+$git_commit\
+$git_state\
+$git_metrics\
+$git_status\
+$custom\
+$cmd_duration\
+$line_break\
+$jobs\
+$status\
+$character"""
 
-[battery]
-disabled = true
 
 [character]
 success_symbol = "[➜](bold green)"
@@ -15,8 +28,8 @@ min_time_to_notify = 30_000
 [git_commit]
 tag_disabled = false
 
-[package]
-disabled = true
+[git_metrics]
+disabled = false
 
 [status]
 disabled = false
