--- a/home/.config/starship.toml
+++ b/home/.config/starship.toml
@@ -22,7 +22,7 @@ error_symbol = "[➜](bold red)"
 
 [cmd_duration]
 min_time = 1_000
-show_notifications = true
+show_notifications = false
 min_time_to_notify = 30_000
 
 [git_commit]
