--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,15 @@
 [submodule ".asdf"]
 	path = .asdf
 	url = https://github.com/asdf-vm/asdf.git
+
+[submodule "ohmyzsh"]
+  path = .config/zsh/ohmyzsh
+  url = https://github.com/robbyrussell/oh-my-zsh.git
+
+[submodule "zsh-syntax-highlighting"]
+  path = .config/zsh/custom/plugins/zsh-syntax-highlighting
+  url = https://github.com/zsh-users/zsh-syntax-highlighting.git
+
+[submodule "zsh-autosuggestions"]
+  path = .config/zsh/custom/plugins/zsh-autosuggestions
+  url = https://github.com/zsh-users/zsh-autosuggestions.git
