--- a/home/.config/distrobox/distrobox.conf
+++ b/home/.config/distrobox/distrobox.conf
@@ -1,2 +1,2 @@
-container_image_default="debian:12"
-container_name_default="debian"
+container_name_default="distrobox"
+container_image_default="registry.fedoraproject.org/fedora-toolbox:40"
