--- a/home/.config/mise.toml
+++ b/home/.config/mise.toml
@@ -3,8 +3,9 @@ MISE_CARGO_HOME = "{{ xdg_data_home }}/cargo"
 MISE_RUSTUP_HOME = "{{ xdg_data_home }}/rustup"
 
 [tools]
+deno = "2.1.4"
 java = "latest"
-node = "23"
+node = "23.8.0"
 python = "latest"
 ruby = "latest"
 rust = "1.83.0"
