update dconf and flatpaks

--- a/setup/dconf/desktop.ini
+++ b/setup/dconf/desktop.ini
@@ -1,13 +1,16 @@
+[a11y/applications]
+screen-reader-enabled=false
+
 [app-folders]
 folder-children=['Utilities', 'YaST', 'Pardus', '0acb2596-4f38-4f1d-a8f5-18b729d140f6', '02858375-2eb0-4b0f-b1b2-db7d1fe6d0d7', 'bf6a2978-8b10-49f7-b231-40b78b8bf6e1', 'b5b28a45-71b4-40b1-9c0c-b8f022ef9487']
 
 [app-folders/folders/02858375-2eb0-4b0f-b1b2-db7d1fe6d0d7]
-apps=['io.github.celluloid_player.Celluloid.desktop', 'org.gnome.TextEditor.desktop', 'org.gnome.FileRoller.desktop', 'org.gnome.Papers.desktop', 'org.gnome.Loupe.desktop']
+apps=['org.gnome.TextEditor.desktop', 'org.gnome.FileRoller.desktop', 'org.gnome.Papers.desktop', 'io.github.celluloid_player.Celluloid.desktop', 'org.gnome.Loupe.desktop']
 name='Leitores'
 translate=false
 
 [app-folders/folders/0acb2596-4f38-4f1d-a8f5-18b729d140f6]
-apps=['org.gnome.tweaks.desktop', 'org.gnome.Settings.desktop', 'org.gnome.DiskUtility.desktop', 'fish.desktop', 'com.github.tchx84.Flatseal.desktop', 'io.github.giantpinkrobots.flatsweep.desktop', 'com.mattjakeman.ExtensionManager.desktop', 'org.gnome.Software.desktop', 'org.freedesktop.GnomeAbrt.desktop', 'io.github.realmazharhussain.GdmSettings.desktop', 'org.gabmus.whatip.desktop', 'org.gnome.baobab.desktop']
+apps=['org.gnome.tweaks.desktop', 'org.gnome.baobab.desktop', 'org.gnome.Settings.desktop', 'org.gnome.DiskUtility.desktop', 'com.github.tchx84.Flatseal.desktop', 'io.github.giantpinkrobots.flatsweep.desktop', 'com.mattjakeman.ExtensionManager.desktop', 'org.gnome.Software.desktop', 'fish.desktop', 'org.freedesktop.GnomeAbrt.desktop', 'io.github.realmazharhussain.GdmSettings.desktop', 'org.gabmus.whatip.desktop']
 name='Sistema'
 translate=false
 
@@ -33,7 +36,7 @@ apps=['org.gnome.design.IconLibrary.desktop']
 name='Pasta sem nome'
 
 [app-folders/folders/bf6a2978-8b10-49f7-b231-40b78b8bf6e1]
-apps=['com.github.huluti.Curtail.desktop', 'io.gitlab.adhami3310.Footage.desktop', 'fr.handbrake.ghb.desktop', 'org.kde.krita.desktop', 'fr.romainvigier.MetadataCleaner.desktop', 'garden.jamie.Morphosis.desktop', 'com.belmoussaoui.Obfuscate.desktop', 'io.github.diegoivan.pdf_metadata_editor.desktop', 'io.gitlab.adhami3310.Converter.desktop', 'io.gitlab.theevilskeleton.Upscaler.desktop']
+apps=['io.gitlab.theevilskeleton.Upscaler.desktop', 'io.github.diegoivan.pdf_metadata_editor.desktop', 'com.github.huluti.Curtail.desktop', 'io.gitlab.adhami3310.Footage.desktop', 'fr.handbrake.ghb.desktop', 'org.kde.krita.desktop', 'garden.jamie.Morphosis.desktop', 'com.belmoussaoui.Obfuscate.desktop', 're.sonny.OhMySVG.desktop', 'io.gitlab.adhami3310.Converter.desktop', 'fr.romainvigier.MetadataCleaner.desktop']
 name='Editores'
 translate=false
 
@@ -41,6 +44,13 @@ translate=false
 picture-options='zoom'
 picture-uri='file:///home/gurja/.config/background'
 picture-uri-dark='file:///home/gurja/.config/background'
+
+[break-reminders/eyesight]
+play-sound=true
+
+[break-reminders/movement]
+duration-seconds=uint32 300
+interval-seconds=uint32 1800
 
 [calendar]
 show-weekdate=true
@@ -50,23 +60,56 @@ automatic-timezone=true
 
 [input-sources]
 current=uint32 0
+mru-sources=[('xkb', 'us+intl'), ('xkb', 'us')]
 sources=[('xkb', 'us+intl')]
+xkb-options=@as []
 
 [interface]
 accent-color='pink'
 clock-format='24h'
 clock-show-weekday=true
 color-scheme='prefer-dark'
+enable-animations=true
 font-antialiasing='rgba'
 font-hinting='full'
 monospace-font-name='FiraCode Nerd Font 10'
 toolkit-accessibility=false
 
 [notifications]
-application-children=['org-gnome-software', 'org-freedesktop-problems-applet', 'org-mozilla-firefox', 'it-mijorus-smile', 'io-github-vikdevelop-savedesktop']
+application-children=['org-gnome-software', 'org-freedesktop-problems-applet', 'org-mozilla-firefox', 'it-mijorus-smile', 'io-github-vikdevelop-savedesktop', 'org-gnome-evolution-alarm-notify', 'com-discordapp-discord', 'io-github-zen-browser-zen', 'com-spotify-client', 'org-gnome-papers', 'com-discordapp-discordcanary', 'app-zen-browser-zen', 'com-google-chrome', 'com-mattjakeman-extensionmanager', 'org-kde-kdenlive', 'fr-handbrake-ghb', 'de-haeckerfelix-fragments', 'org-gnome-nautilus', 'com-google-chrome-flextop-chrome-hnpfjngllnobngcgfapefoaidbinmjnm-default', 'org-gimp-gimp']
+
+[notifications/application/app-zen-browser-zen]
+application-id='app.zen_browser.zen.desktop'
+
+[notifications/application/com-discordapp-discord]
+application-id='com.discordapp.Discord.desktop'
+
+[notifications/application/com-discordapp-discordcanary]
+application-id='com.discordapp.DiscordCanary.desktop'
+
+[notifications/application/com-google-chrome-flextop-chrome-hnpfjngllnobngcgfapefoaidbinmjnm-default]
+application-id='com.google.Chrome.flextop.chrome-hnpfjngllnobngcgfapefoaidbinmjnm-Default.desktop'
+
+[notifications/application/com-google-chrome]
+application-id='com.google.Chrome.desktop'
+
+[notifications/application/com-mattjakeman-extensionmanager]
+application-id='com.mattjakeman.ExtensionManager.desktop'
+
+[notifications/application/com-spotify-client]
+application-id='com.spotify.Client.desktop'
+
+[notifications/application/de-haeckerfelix-fragments]
+application-id='de.haeckerfelix.Fragments.desktop'
+
+[notifications/application/fr-handbrake-ghb]
+application-id='fr.handbrake.ghb.desktop'
 
 [notifications/application/io-github-vikdevelop-savedesktop]
 application-id='io.github.vikdevelop.SaveDesktop.desktop'
+
+[notifications/application/io-github-zen-browser-zen]
+application-id='io.github.zen_browser.zen.desktop'
 
 [notifications/application/it-mijorus-smile]
 application-id='it.mijorus.smile.desktop'
@@ -74,8 +117,23 @@ application-id='it.mijorus.smile.desktop'
 [notifications/application/org-freedesktop-problems-applet]
 application-id='org.freedesktop.problems.applet.desktop'
 
+[notifications/application/org-gimp-gimp]
+application-id='org.gimp.GIMP.desktop'
+
+[notifications/application/org-gnome-evolution-alarm-notify]
+application-id='org.gnome.Evolution-alarm-notify.desktop'
+
+[notifications/application/org-gnome-nautilus]
+application-id='org.gnome.Nautilus.desktop'
+
+[notifications/application/org-gnome-papers]
+application-id='org.gnome.Papers.desktop'
+
 [notifications/application/org-gnome-software]
 application-id='org.gnome.Software.desktop'
+
+[notifications/application/org-kde-kdenlive]
+application-id='org.kde.kdenlive.desktop'
 
 [notifications/application/org-mozilla-firefox]
 application-id='org.mozilla.firefox.desktop'
