--- a/setup/dconf/settings-daemon.ini
+++ b/setup/dconf/settings-daemon.ini
@@ -1,5 +1,15 @@
+[global-shortcuts]
+applications=['com.google.Chrome', 'com.github.finefindus.eyedropper']
+
+[global-shortcuts/com.github.finefindus.eyedropper]
+shortcuts=[('EyedropperColorPick', {'shortcuts': <['<Super>p']>, 'description': <'Pick a New Color'>})]
+
+[global-shortcuts/com.google.Chrome]
+shortcuts=[('enter-zapper-mode', {'description': <'Entrar no modo do elemento zapper'>})]
+
 [plugins/color]
 night-light-enabled=false
+night-light-last-coordinates=(-22.420421958500828, -42.966099999999997)
 night-light-temperature=uint32 3700
 
 [plugins/media-keys]
