--- a/home/.config__Cursor__User__settings.json
+++ b/home/.config__Cursor__User__settings.json
@@ -103,5 +103,6 @@
   "workbench.navigationControl.enabled": false,
   "workbench.startupEditor": "none",
   "biome.lsp.trace.server": "messages",
-  "biome.requireConfiguration": true
+  "biome.requireConfiguration": true,
+  "workbench.colorTheme": "Adwaita Dark & colorful status bar"
 }
