--- a/home/.config__Cursor__User__keybindings.json
+++ b/home/.config__Cursor__User__keybindings.json
@@ -171,5 +171,9 @@
     "key": "ctrl+k ctrl+shift+i",
     "command": "editor.action.formatDocument",
     "when": "editorHasDocumentFormattingProvider && editorTextFocus && !editorReadonly && !inCompositeEditor"
+  },
+  {
+    "key": "ctrl+i",
+    "command": "composerMode.agent"
   }
 ]
